some style stuff, routes for profiles, custom sign in forms

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,4 +1,4 @@
-<div class="content profile_content">
+<div class="content profile_content" id="profile_owner">
 	<%= image_tag(@gravatar_src) %>
 	<h2><%= @profile_owner.url %></h2>
 </div>
